log
Sat, 19 Mar 2022 16:50:43: 
 list.c | 27 ++++++++++++++++++++++-----
 1 file changed, 22 insertions(+), 5 deletions(-)
 tests:  0|0
9ab1536
Sat, 19 Mar 2022 16:51:48: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:41:5: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   41 |     return;
      |     ^~~~~~
list.c:39:8: note: declared here
   39 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c: In function 'nextList':
list.c:46:5: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   46 |     return;
      |     ^~~~~~
list.c:44:8: note: declared here
   44 | void * nextList(List * list) {
      |        ^~~~~~~~
list.c: In function 'lastList':
list.c:51:5: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   51 |     return;
      |     ^~~~~~
list.c:49:8: note: declared here
   49 | void * lastList(List * list) {
      |        ^~~~~~~~
list.c: In function 'prevList':
list.c:56:5: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   56 |     return;
      |     ^~~~~~
list.c:54:8: note: declared here
   54 | void * prevList(List * list) {
      |        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d78ccbe
Sat, 19 Mar 2022 18:07:55: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
e3be639
Sat, 19 Mar 2022 22:56:04: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
279d6f8
Sat, 19 Mar 2022 22:57:17: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fe62451
Sat, 19 Mar 2022 22:59:42: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
8b4ea74
Sat, 19 Mar 2022 23:00:12: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
3891e6b
Sun, 20 Mar 2022 13:09:53: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
d1c06d8
Sun, 20 Mar 2022 13:11:59: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
dbf68af
Sun, 20 Mar 2022 16:21:20: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c753324
Sun, 20 Mar 2022 16:22:04: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4790bd0
Sun, 20 Mar 2022 16:27:53: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
6bf4a8b
Sun, 20 Mar 2022 16:33:31: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  1|5
total_score: 10/70
2e74016
